<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_settings"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    tools:context=".SettingsActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="14dp"
        android:text="@string/settings"
        android:textColor="@color/text"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/swDarkTheme"
        android:textColor="@color/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sett_padding"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="@dimen/sett_padding"
        android:text="@string/dark_theme"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

    <TextView
        android:id="@+id/tvShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sett_padding"
        android:layout_marginTop="@dimen/sett_top_interval"
        android:text="@string/share"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swDarkTheme" />

    <TextView
        android:id="@+id/tvSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sett_padding"
        android:layout_marginTop="@dimen/sett_top_interval"
        android:text="@string/support"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShare" />

    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sett_padding"
        android:layout_marginTop="@dimen/sett_top_interval"
        android:text="@string/terms"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSupport" />

    <ImageView
        android:id="@+id/imgShare"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="@dimen/sett_top_interval"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swDarkTheme"
        app:srcCompat="@drawable/share" />

    <ImageView
        android:id="@+id/imgSupport"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="@dimen/sett_top_interval"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgShare"
        app:srcCompat="@drawable/support" />

    <ImageView
        android:id="@+id/imgTerms"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="@dimen/sett_top_interval"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSupport"
        app:srcCompat="@drawable/forward" />

</androidx.constraintlayout.widget.ConstraintLayout>