<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_padding"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_name"
        android:textColor="@color/button"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="14dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/main_padding"
            android:layout_marginRight="@dimen/main_padding"
            android:layout_weight="33"
            android:backgroundTint="@color/button"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/main_padding"
            android:layout_marginTop="@dimen/main_padding"
            android:layout_marginRight="@dimen/main_padding"
            android:layout_weight="33"
            android:backgroundTint="@color/button"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/media"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/main_padding"
            android:layout_marginTop="@dimen/main_padding"
            android:layout_marginRight="@dimen/main_padding"
            android:layout_weight="33"
            android:backgroundTint="@color/button"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>